--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,108 @@
-body {
+.container {
   background: rgb(231, 241, 250);
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .weather-app {
   background: white;
-  max-width: 600px;
-  margin: 60px auto;
-  padding: 30px;
-  box-shadow: 0 30px 50px rgba(-5, 50, 100, 0.08);
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 10px;
+  margin: 60px auto;
+  max-width: 600px;
+  padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid rgb(231, 241, 250);
+  padding-bottom: 30px;
+}
+
+.search-form-input {
+  background: rgb(231, 241, 250);
+  border: none;
+  border-radius: 6px;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  padding: 15px 20px;
+  width: 82%;
+}
+
+.search-form-button {
+  background: rgb(128, 162, 219);
+  border: none;
+  border-radius: 6px;
+  color: white;
+  font-size: 16px;
+  margin-left: 5px;
+  padding: 15px 20px;
+  transition: all 200ms ease-in-out;
+}
+
+.search-form-button:hover {
+  cursor: pointer;
+  filter: opacity(90%);
+}
+
+main {
+  padding: 30px 0;
+}
+
+.current-weather-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.current-weather-city {
+  font-size: 38px;
+  font-weight: 900;
+  margin: 0;
+}
+
+.current-weather-details {
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  font-weight: 450;
+  line-height: 24px;
+}
+
+.current-weather-details strong {
+  color: #f65282;
+}
+
+.current-temp-details {
+  display: flex;
+}
+
+.current-temp-icon {
+  font-size: 40px;
+  margin-top: 22px;
+}
+
+.current-temp {
+  font-size: 80px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.current-temp-unit {
+  font-size: 28px;
+  margin-top: 16px;
+}
+
+footer {
+  border-top: 1px solid rgb(231, 241, 250);
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 13px;
+  padding-top: 30px;
+  text-align: center;
+}
+
+a {
+  color: rgb(128, 162, 219);
+  text-decoration: none;
+  transition: all 200ms ease-in-out;
+}
+
+a:hover {
+  text-decoration: underline;
 }
