--- a/src/styles.css
+++ b/src/styles.css
@@ -74,19 +74,19 @@ main {
 }
 
 .current-temp-icon {
-  font-size: 40px;
-  margin-top: 22px;
+  height: 88px;
+  width: 88px;
 }
 
 .current-temp {
-  font-size: 80px;
+  font-size: 88px;
   font-weight: bold;
-  margin-left: 10px;
+  line-height: 88px;
 }
 
 .current-temp-unit {
   font-size: 28px;
-  margin-top: 16px;
+  margin-top: 6px;
 }
 
 footer {
