--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,36 @@ main {
   margin-top: 6px;
 }
 
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+
+.weather-forecast-temperature {
+  color: #f65282;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.forecast-temp {
+  padding: 0 10px;
+}
+
 footer {
   border-top: 1px solid rgb(231, 241, 250);
   color: rgba(0, 0, 0, 0.6);
