--- a/src/styles.css
+++ b/src/styles.css
@@ -104,8 +104,10 @@ main {
 }
 
 .weather-forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  display: block;
+  height: 88px;
+  margin: 0 auto;
+  width: 88px;
 }
 
 .weather-forecast-temperature {
